--- a/PTi1MenaxhimiDepos/Main.en.resx
+++ b/PTi1MenaxhimiDepos/Main.en.resx
@@ -121,10 +121,16 @@
   <data name="btnhyrjet.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnhyrjet.Location" type="System.Drawing.Point, System.Drawing">
+    <value>385, 8</value>
+  </data>
   <data name="label13.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="label13.Location" type="System.Drawing.Point, System.Drawing">
+    <value>841, 88</value>
+  </data>
   <data name="label13.Size" type="System.Drawing.Size, System.Drawing">
     <value>110, 22</value>
   </data>
@@ -135,10 +141,13 @@
     <value>NoControl</value>
   </data>
   <data name="button6.Location" type="System.Drawing.Point, System.Drawing">
-    <value>959, 8</value>
+    <value>828, 8</value>
   </data>
   <data name="label1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
+  </data>
+  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>667, 88</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
     <value>123, 22</value>
@@ -150,7 +159,7 @@
     <value>NoControl</value>
   </data>
   <data name="button2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>819, 8</value>
+    <value>667, 8</value>
   </data>
   <data name="btnshitja.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -168,7 +177,7 @@
     <value>NoControl</value>
   </data>
   <data name="label8.Location" type="System.Drawing.Point, System.Drawing">
-    <value>677, 88</value>
+    <value>1002, 88</value>
   </data>
   <data name="label8.Size" type="System.Drawing.Size, System.Drawing">
     <value>116, 22</value>
@@ -178,6 +187,9 @@
   </data>
   <data name="btnbashkpunimet.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
+  </data>
+  <data name="btnbashkpunimet.Location" type="System.Drawing.Point, System.Drawing">
+    <value>995, 8</value>
   </data>
   <data name="btnregister.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -197,11 +209,14 @@
   <data name="btnartikujt.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="btnartikujt.Location" type="System.Drawing.Point, System.Drawing">
+    <value>254, 8</value>
+  </data>
   <data name="label4.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>288, 88</value>
+    <value>278, 88</value>
   </data>
   <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
     <value>76, 22</value>
@@ -212,6 +227,9 @@
   <data name="label6.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="label6.Location" type="System.Drawing.Point, System.Drawing">
+    <value>550, 88</value>
+  </data>
   <data name="label6.Size" type="System.Drawing.Size, System.Drawing">
     <value>49, 22</value>
   </data>
@@ -221,8 +239,14 @@
   <data name="btndaljet.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="btndaljet.Location" type="System.Drawing.Point, System.Drawing">
+    <value>516, 8</value>
+  </data>
   <data name="label5.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
+  </data>
+  <data name="label5.Location" type="System.Drawing.Point, System.Drawing">
+    <value>415, 88</value>
   </data>
   <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
     <value>66, 22</value>
@@ -242,9 +266,6 @@
   <data name="tabControl1.Size" type="System.Drawing.Size, System.Drawing">
     <value>2020, 774</value>
   </data>
-  <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>55, 26</value>
-  </data>
   <data name="tlenglish.Size" type="System.Drawing.Size, System.Drawing">
     <value>143, 26</value>
   </data>
@@ -258,13 +279,13 @@
     <value>Albania</value>
   </data>
   <data name="language.Size" type="System.Drawing.Size, System.Drawing">
-    <value>88, 26</value>
+    <value>88, 24</value>
   </data>
   <data name="language.Text" xml:space="preserve">
     <value>Language</value>
   </data>
   <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1924, 30</value>
+    <value>1924, 28</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>1924, 990</value>
